--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install Dependencies
-      run: apt install build-essentials
+      run: sudo apt install -y build-essentials
     - name: make
       run: make -C ./test/
