--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Install Dependencies
-      run: sudo apt-get update && sudo apt-get install -y build-essential
-    - name: make
+    - name: make library
+      run: make
+    - name: make test
       run: make -C ./test/
