--- a/test/Makefile
+++ b/test/Makefile
@@ -5,8 +5,13 @@ TEST = ./unity/unity.c
 LIBFT_TEST = ./test_libft.c
 GNL_TEST = ./test_gnl.c
 ULONGTOHEX_TEST = ./test_ft_ulongtohex.c
+LTOA_TEST = ./test_ft_ltoa.c
 
-all: libft gnl ulongtohex
+all: build libft gnl ulongtohex ltoa
+
+
+build:
+	make debug -C ../
 
 libft:
 	gcc $(FLAGS) $(SANITIZE) $(TEST) $(LIBFT_TEST) -L.. -lft -o run_libft
@@ -20,5 +25,13 @@ ulongtohex:
 	$(CC) $(FLAGS) $(SANITIZE) $(TEST) $(ULONGTOHEX_TEST) -L.. -lft -o run_ulongtohex
 	./run_ulongtohex
 
+ltoa:
+	$(CC) $(FLAGS) $(SANITIZE) $(TEST) $(LTOA_TEST) -L.. -lft -o run_ltoa
+	./run_ltoa
+
+test:
+	$(CC) $(FLAGS) $(SANITIZE) main.c -L.. -lft -o run_test
+	./run_test
+
 clean:
-	rm -fr run_libft* run_gnl* run_ulongtohex*
+	rm -fr run_libft* run_gnl* run_ulongtohex* run_ltoa* run_test*
