--- a/test/Makefile
+++ b/test/Makefile
@@ -6,8 +6,9 @@ LIBFT_TEST = ./test_libft.c
 GNL_TEST = ./test_gnl.c
 ULONGTOHEX_TEST = ./test_ft_ulongtohex.c
 LTOA_TEST = ./test_ft_ltoa.c
+VEC_TEST = ./test_vec.c
 
-all: build libft gnl ulongtohex ltoa
+all: build libft gnl ulongtohex ltoa vec
 
 build:
 	make -C ..
@@ -27,6 +28,10 @@ ulongtohex:
 ltoa:
 	$(CC) $(FLAGS) $(SANITIZE) $(TEST) $(LTOA_TEST) -L.. -lft -o run_ltoa
 	./run_ltoa
+
+vec:
+	gcc $(FLAGS) $(SANITIZE) $(TEST) $(VEC_TEST) -L.. -lft -o run_vec
+	./run_vec
 
 playground:
 	$(CC) $(FLAGS) $(SANITIZE) playground.c -L.. -lft -o run_playground
